--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 
-<div style="display: flex; align-items: center;">
+<div style="display: flex; align-items: center; background-color: black; color: white;">
     <div style="flex: 1;">
         <h1>Notre objectif</h1>
         <p>Créer des offres RSE écoresponsables, accessibles et inclusives pour les clients PME d'Orange.</p>
@@ -63,16 +63,16 @@
         <p>La RSE est la responsabilité sociétale des entreprises. C'est un concept qui vise à intégrer les préoccupations sociales, environnementales et économiques dans les activités de l'entreprise. Cela signifie que l'entreprise doit prendre en compte l'impact de ses activités sur la société et l'environnement et agir de manière responsable.</p>
     </div>
 </div>
-    <div style="display: flex; align-items: center;">
-        <div style="flex: 1;">
-            <h1>La RSE au cœur des PME</h1>
-            <p>La RSE est un enjeu majeur pour les PME (petite et moyennes entreprises). En effet, les PME ont un impact
-                important sur la société et l'environnement en raison de leur taille et de leur nombre. Il est donc essentiel
-                que les PME intègrent la RSE dans leur stratégie et leurs activités pour contribuer au développement durable et
-                à la responsabilité sociétale.</p>
-        </div>
-        <img alt="pmerse" src="img/pmerse.png"  style="margin-left: 20px; flex: 1;">
+<div style="display: flex; align-items: center; background-color: black; color: white;">
+    <div style="flex: 1;">
+        <h1>La RSE au cœur des PME</h1>
+        <p>La RSE est un enjeu majeur pour les PME (petite et moyennes entreprises). En effet, les PME ont un impact
+            important sur la société et l'environnement en raison de leur taille et de leur nombre. Il est donc essentiel
+            que les PME intègrent la RSE dans leur stratégie et leurs activités pour contribuer au développement durable et
+            à la responsabilité sociétale.</p>
     </div>
+    <img alt="pmerse" src="img/pmerse.png"  style="margin-left: 20px; flex: 1;">
+</div>
 
 <div style="display: flex; align-items: center;">
     <img alt="donnee" src="img/donnée.jpeg" style="margin-right: 20px; flex: 1;">
@@ -84,8 +84,8 @@
     </div>
 </div>
 
-    <h1>Offres :</h1>
-    <p>Isso 26000/14001</p>
+<h1 style="color: white; background-color: black;">Offres :</h1>
+<p style="color: white; background-color: black;">Isso 26000/14001</p>
 
     <h1>Rentabilités :</h1>
     <table border="1" style="border-collapse: collapse; width: 100%;">
