--- a/index.html
+++ b/index.html
@@ -137,5 +137,35 @@
         &#8679;
     </a>
 </section>
+
+<section id="footer">
+    <footer>
+        <h2>Contacts</h2>
+        <div class="contact">
+            <div>
+                <p>Florimon :</p>
+                <a href="https://www.linkedin.com/in/florimon-faure-9790a931a/?originalSubdomain=fr">LinkedIn</a>
+            </div>
+            <div>
+                <p>Wayan :</p>
+                <a href="https://www.linkedin.com/in/wayan-poulet-976486206/?originalSubdomain=fr">LinkedIn</a>
+            </div>
+            <div>
+                <p>Aude :</p>
+                <a href="https://www.linkedin.com/in/aude-gauthereau-455b41213/">LinkedIn</a>
+            </div>
+            <div>
+                <p>Noam :</p>
+                <a href="https://www.linkedin.com/in/noam-baroukh-b40738300/">LinkedIn</a>
+            </div>
+            <div>
+                <p>Dan :</p>
+                <a href="https://www.linkedin.com/in/dan-bitton-58a50b264/">LinkedIn</a>
+            </div>
+        </div>
+    </footer>
+</section>
+
+
 </body>
 </html>
