--- a/calculator.html
+++ b/calculator.html
@@ -26,167 +26,184 @@
 
 
 <section id="calculator">
-<div class="container">
-    <h1>Calculateur de Responsabilité Sociétale des Entreprises (RSE)</h1>
-    <p>Répondez par "Oui" ou "Non" à chaque question pour évaluer votre entreprise sur les différents critères RSE.</p>
+    <div class="container">
+        <h1>Calculateur de Responsabilité Sociétale des Entreprises (RSE)</h1>
+        <p>Répondez par "Oui" ou "Non" à chaque question pour évaluer votre entreprise sur les différents critères RSE.</p>
 
-    <!-- Calculateur par critère -->
-    <div id="form">
-        <h2>Calcul par critère</h2>
+        <!-- Calculateur par critère -->
+        <div id="form">
+            <h2>Calcul par critère</h2>
 
-        <div class="criteria" id="impact_environnemental">
-            <h3>Impact environnemental</h3>
-            <label>Réduisez-vous les émissions de CO2 ?</label>
-            <input type="radio" name="impact_co2" value="1"> Oui
-            <input type="radio" name="impact_co2" value="0"> Non
-            <br>
-            <label>Gérez-vous efficacement vos déchets ?</label>
-            <input type="radio" name="impact_dechets" value="1"> Oui
-            <input type="radio" name="impact_dechets" value="0"> Non
-            <br>
-            <label>Utilisez-vous des énergies renouvelables ?</label>
-            <input type="radio" name="impact_energies" value="1"> Oui
-            <input type="radio" name="impact_energies" value="0"> Non
+            <div class="criteria" id="impact">
+                <h3>Impact environnemental</h3>
+                <label>Réduisez-vous les émissions de CO₂ ?</label>
+                <input type="radio" name="impact_co2" value="1"> Oui
+                <input type="radio" name="impact_co2" value="0"> Non
+                <br>
+                <label>Si oui : Quels sont vos principaux leviers (exemple : énergie renouvelable, réduction des déplacements) ?</label>
+                <input type="text" name="impact_leviers" placeholder="Réponse">
+                <br>
+                <label>Gérez-vous efficacement vos déchets ?</label>
+                <input type="radio" name="impact_dechets" value="1"> Oui
+                <input type="radio" name="impact_dechets" value="0"> Non
+                <br>
+                <label>Si oui : Incluez-vous des pratiques de recyclage ou d’économie circulaire ?</label>
+                <input type="text" name="impact_recyclage" placeholder="Réponse">
+            </div>
+
+            <button onclick="calculerScoreParCritere('impact')">Calculer Impact Environnemental</button>
+            <div id="result_impact" class="result" style="display: none;"></div>
+
+            <div class="criteria" id="conditions">
+                <h3>Conditions de travail</h3>
+                <label>Votre entreprise favorise-t-elle la diversité et l’inclusion ?</label>
+                <input type="radio" name="conditions_diversite" value="1"> Oui
+                <input type="radio" name="conditions_diversite" value="0"> Non
+                <br>
+                <label>Si oui : Quels axes prioritaires (recrutement, égalité salariale, accessibilité) ?</label>
+                <input type="text" name="conditions_axes" placeholder="Réponse">
+                <br>
+                <label>Proposez-vous des formations régulières à vos employés ?</label>
+                <input type="radio" name="conditions_formation" value="1"> Oui
+                <input type="radio" name="conditions_formation" value="0"> Non
+                <br>
+                <label>Si oui : Citez quelques exemples de formations récentes.</label>
+                <input type="text" name="conditions_formations" placeholder="Réponse">
+            </div>
+
+            <button onclick="calculerScoreParCritere('conditions')">Calculer Conditions de Travail</button>
+            <div id="result_conditions" class="result" style="display: none;"></div>
+
+            <div class="criteria" id="engagement">
+                <h3>Engagement sociétal</h3>
+                <label>Votre entreprise est-elle impliquée auprès d’association, d'artisans ou de commerces locaux ?</label>
+                <input type="radio" name="engagement_local" value="1"> Oui
+                <input type="radio" name="engagement_local" value="0"> Non
+                <br>
+                <label>Si oui : Décrivez les initiatives principales.</label>
+                <input type="text" name="engagement_initiatives" placeholder="Réponse">
+            </div>
+
+            <button onclick="calculerScoreParCritere('engagement')">Calculer Engagement Sociétal</button>
+            <div id="result_engagement" class="result" style="display: none;"></div>
+
+            <div class="criteria" id="gouvernance">
+                <h3>Gouvernance</h3>
+                <label>Communiquez-vous de manière transparente sur vos actions ?</label>
+                <input type="radio" name="gouvernance_transparence" value="1"> Oui
+                <input type="radio" name="gouvernance_transparence" value="0"> Non
+                <br>
+                <label>Si oui : Quels canaux de communication utilisez-vous ?</label>
+                <input type="text" name="gouvernance_canaux" placeholder="Réponse">
+                <br>
+                <label>Votre entreprise a-t-elle une politique de conformité claire ?</label>
+                <input type="radio" name="gouvernance_conformite" value="1"> Oui
+                <input type="radio" name="gouvernance_conformite" value="0"> Non
+                <br>
+                <label>Si oui : Quels outils garantissent sa mise en œuvre ?</label>
+                <input type="text" name="gouvernance_outils" placeholder="Réponse">
+            </div>
+
+            <button onclick="calculerScoreParCritere('gouvernance')">Calculer Gouvernance</button>
+            <div id="result_gouvernance" class="result" style="display: none;"></div>
+
+            <div class="criteria" id="clients">
+                <h3>Relations avec les clients</h3>
+                <label>Proposez-vous des produits/services durables ?</label>
+                <input type="radio" name="clients_durables" value="1"> Oui
+                <input type="radio" name="clients_durables" value="0"> Non
+                <br>
+                <label>Si oui : Quels critères définissent leur durabilité ?</label>
+                <input type="text" name="clients_criteres" placeholder="Réponse">
+                <br>
+                <label>Écoutez-vous activement les retours de vos clients ?</label>
+                <input type="radio" name="clients_retours" value="1"> Oui
+                <input type="radio" name="clients_retours" value="0"> Non
+                <br>
+                <label>Si oui : Quels changements en découlent ?</label>
+                <input type="text" name="clients_changements" placeholder="Réponse">
+            </div>
+
+            <button onclick="calculerScoreParCritere('clients')">Calculer Relations avec les Clients</button>
+            <div id="result_clients" class="result" style="display: none;"></div>
+
+            <div class="criteria" id="fournisseurs">
+                <h3>Relations avec les fournisseurs</h3>
+                <label>Respectez-vous les critères sociaux et environnementaux avec vos fournisseurs ?</label>
+                <input type="radio" name="fournisseurs_respect" value="1"> Oui
+                <input type="radio" name="fournisseurs_respect" value="0"> Non
+                <br>
+                <label>Si oui : Quels critères clés appliquez-vous ?</label>
+                <input type="text" name="fournisseurs_criteres" placeholder="Réponse">
+                <br>
+                <label>Évaluez-vous régulièrement la performance de vos fournisseurs ?</label>
+                <input type="radio" name="fournisseurs_evaluation" value="1"> Oui
+                <input type="radio" name="fournisseurs_evaluation" value="0"> Non
+                <br>
+                <label>Si oui : Quels outils ou indicateurs utilisez-vous ?</label>
+                <input type="text" name="fournisseurs_indicateurs" placeholder="Réponse">
+            </div>
+
+            <button onclick="calculerScoreParCritere('fournisseurs')">Calculer Relations avec les Fournisseurs</button>
+            <div id="result_fournisseurs" class="result" style="display: none;"></div>
+
+            <div class="criteria" id="communautes">
+                <h3>Respect des communautés</h3>
+                <label>Promouvez-vous des initiatives pour la réduction des inégalités ?</label>
+                <input type="radio" name="communautes_inegalites" value="1"> Oui
+                <input type="radio" name="communautes_inegalites" value="0"> Non
+                <br>
+                <label>Si oui : Quels programmes avez-vous mis en place ?</label>
+                <input type="text" name="communautes_programmes" placeholder="Réponse">
+                <br>
+                <label>Favorisez-vous la cohésion sociale dans les zones où vous êtes implantés ?</label>
+                <input type="radio" name="communautes_cohesion" value="1"> Oui
+                <input type="radio" name="communautes_cohesion" value="0"> Non
+                <br>
+                <label>Si oui : Comment impliquez-vous les communautés locales ?</label>
+                <input type="text" name="communautes_implication" placeholder="Réponse">
+            </div>
+
+            <button onclick="calculerScoreParCritere('communautes')">Calculer Respect des Communautés</button>
+            <div id="result_communautes" class="result" style="display: none;"></div>
+
+            <div class="criteria" id="ethique">
+                <h3>Éthique</h3>
+                <label>Votre entreprise applique-t-elle des pratiques commerciales éthiques ?</label>
+                <input type="radio" name="ethique_commerciale" value="1"> Oui
+                <input type="radio" name="ethique_commerciale" value="0"> Non
+                <br>
+                <label>Si oui : Quelles lignes directrices encadrent vos pratiques commerciales ?</label>
+                <input type="text" name="ethique_lignes" placeholder="Réponse">
+                <br>
+                <label>Avez-vous une politique de lutte contre la corruption ?</label>
+                <input type="radio" name="ethique_corruption" value="1"> Oui
+                <input type="radio" name="ethique_corruption" value="0"> Non
+                <br>
+                <label>Si oui : Quels mécanismes de contrôle sont en place ?</label>
+                <input type="text" name="ethique_controle" placeholder="Réponse">
+                <br>
+                <label>Votre entreprise favorise-t-elle des pratiques de transparence dans ses opérations ?</label>
+                <input type="radio" name="ethique_transparence" value="1"> Oui
+                <input type="radio" name="ethique_transparence" value="0"> Non
+                <br>
+                <label>Si oui : Quels outils utilisez-vous pour communiquer de manière transparente (rapports, audits, etc.) ?</label>
+                <input type="text" name="ethique_outils" placeholder="Réponse">
+            </div>
+
+            <button onclick="calculerScoreParCritere('ethique')">Calculer Éthique</button>
+            <div id="result_ethique" class="result" style="display: none;"></div>
+
         </div>
-
-        <button onclick="calculerScoreParCritere('impact')">Calculer Impact Environnemental</button>
-        <div id="result_impact" class="result" style="display: none;"></div>
-
-        <div class="criteria" id="conditions_travail">
-            <h3>Conditions de travail</h3>
-            <label>Offrez-vous un environnement de travail sûr ?</label>
-            <input type="radio" name="conditions_surete" value="1"> Oui
-            <input type="radio" name="conditions_surete" value="0"> Non
-            <br>
-            <label>Votre entreprise favorise-t-elle la diversité et l'inclusion ?</label>
-            <input type="radio" name="conditions_diversite" value="1"> Oui
-            <input type="radio" name="conditions_diversite" value="0"> Non
-            <br>
-            <label>Proposez-vous des formations régulières à vos employés ?</label>
-            <input type="radio" name="conditions_formation" value="1"> Oui
-            <input type="radio" name="conditions_formation" value="0"> Non
+        <br>
+        <br>
+        <div id="global_calculation">
+            <h2 style="text-align: center">Calcul global</h2>
+            <button onclick="calculerScoreGlobal()">Calculer le Score Global</button>
+            <div id="result_global" class="result" style="display: none;"></div>
         </div>
-
-        <button onclick="calculerScoreParCritere('conditions')">Calculer Conditions de Travail</button>
-        <div id="result_conditions" class="result" style="display: none;"></div>
-
-        <div class="criteria" id="engagement_societal">
-            <h3>Engagement sociétal</h3>
-            <label>Soutenez-vous des initiatives locales ?</label>
-            <input type="radio" name="engagement_local" value="1"> Oui
-            <input type="radio" name="engagement_local" value="0"> Non
-            <br>
-            <label>Votre entreprise est-elle impliquée dans des actions éthiques ?</label>
-            <input type="radio" name="engagement_ethique" value="1"> Oui
-            <input type="radio" name="engagement_ethique" value="0"> Non
-            <br>
-            <label>Offrez-vous des dons ou du bénévolat à des causes sociales ?</label>
-            <input type="radio" name="engagement_dons" value="1"> Oui
-            <input type="radio" name="engagement_dons" value="0"> Non
-        </div>
-
-        <button onclick="calculerScoreParCritere('engagement')">Calculer Engagement Sociétal</button>
-        <div id="result_engagement" class="result" style="display: none;"></div>
-
-        <div class="criteria" id="gouvernance">
-            <h3>Gouvernance</h3>
-            <label>Votre entreprise respecte-t-elle toutes les régulations ?</label>
-            <input type="radio" name="gouvernance_regulations" value="1"> Oui
-            <input type="radio" name="gouvernance_regulations" value="0"> Non
-            <br>
-            <label>Communiquez-vous de manière transparente sur vos actions ?</label>
-            <input type="radio" name="gouvernance_transparence" value="1"> Oui
-            <input type="radio" name="gouvernance_transparence" value="0"> Non
-            <br>
-            <label>Votre entreprise a-t-elle une politique de conformité claire ?</label>
-            <input type="radio" name="gouvernance_conformite" value="1"> Oui
-            <input type="radio" name="gouvernance_conformite" value="0"> Non
-        </div>
-
-        <button onclick="calculerScoreParCritere('gouvernance')">Calculer Gouvernance</button>
-        <div id="result_gouvernance" class="result" style="display: none;"></div>
-
-        <div class="criteria" id="clients">
-            <h3>Relations avec les clients</h3>
-            <label>Proposez-vous des produits/services durables ?</label>
-            <input type="radio" name="clients_durables" value="1"> Oui
-            <input type="radio" name="clients_durables" value="0"> Non
-            <br>
-            <label>Votre entreprise garantit-elle la qualité de ses produits/services ?</label>
-            <input type="radio" name="clients_qualite" value="1"> Oui
-            <input type="radio" name="clients_qualite" value="0"> Non
-            <br>
-            <label>Écoutez-vous activement les retours de vos clients ?</label>
-            <input type="radio" name="clients_retours" value="1"> Oui
-            <input type="radio" name="clients_retours" value="0"> Non
-        </div>
-
-        <button onclick="calculerScoreParCritere('clients')">Calculer Relations avec les Clients</button>
-        <div id="result_clients" class="result" style="display: none;"></div>
-
-        <div class="criteria" id="relation_avec_fournisseurs">
-            <h3>Relations avec les fournisseurs</h3>
-            <label>Respectez-vous les critères sociaux et environnementaux avec vos fournisseurs ?</label>
-            <input type="radio" name="fournisseurs_respect" value="1"> Oui
-            <input type="radio" name="fournisseurs_respect" value="0"> Non
-            <br>
-            <label>Vos fournisseurs sont-ils engagés dans des pratiques durables ?</label>
-            <input type="radio" name="fournisseurs_pratiques" value="1"> Oui
-            <input type="radio" name="fournisseurs_pratiques" value="0"> Non
-            <br>
-            <label>Évaluez-vous régulièrement la performance de vos fournisseurs ?</label>
-            <input type="radio" name="fournisseurs_evaluation" value="1"> Oui
-            <input type="radio" name="fournisseurs_evaluation" value="0"> Non
-        </div>
-
-        <button onclick="calculerScoreParCritere('fournisseurs')">Calculer Relations avec les Fournisseurs</button>
-        <div id="result_fournisseurs" class="result" style="display: none;"></div>
-
-        <div class="criteria" id="respect_communautes">
-            <h3>Respect des communautés</h3>
-            <label>Votre entreprise soutient-elle des initiatives pour la communauté ?</label>
-            <input type="radio" name="communautes_soutien" value="1"> Oui
-            <input type="radio" name="communautes_soutien" value="0"> Non
-            <br>
-            <label>Promouvez-vous des initiatives pour la réduction des inégalités ?</label>
-            <input type="radio" name="communautes_inegalites" value="1"> Oui
-            <input type="radio" name="communautes_inegalites" value="0"> Non
-            <br>
-            <label>Favorisez-vous la cohésion sociale dans les zones où vous êtes implantés ?</label>
-            <input type="radio" name="communautes_cohesion" value="1"> Oui
-            <input type="radio" name="communautes_cohesion" value="0"> Non
-        </div>
-
-        <button onclick="calculerScoreParCritere('communautes')">Calculer Respect des Communautés</button>
-        <div id="result_communautes" class="result" style="display: none;"></div>
-
-        <div class="criteria" id="ethique">
-            <h3>Éthique</h3>
-            <label>Votre entreprise applique-t-elle des pratiques commerciales éthiques ?</label>
-            <input type="radio" name="ethique_commerciale" value="1"> Oui
-            <input type="radio" name="ethique_commerciale" value="0"> Non
-            <br>
-            <label>Avez-vous une politique de lutte contre la corruption ?</label>
-            <input type="radio" name="ethique_corruption" value="1"> Oui
-            <input type="radio" name="ethique_corruption" value="0"> Non
-            <br>
-            <label>Votre entreprise favorise-t-elle des pratiques de transparence dans ses opérations ?</label>
-            <input type="radio" name="ethique_transparence" value="1"> Oui
-            <input type="radio" name="ethique_transparence" value="0"> Non
-        </div>
-
-        <button onclick="calculerScoreParCritere('ethique')">Calculer Éthique</button>
-        <div id="result_ethique" class="result" style="display: none;"></div>
-
-        <hr>
-        <!-- Calculateur global -->
-        <h2>Calcul global</h2>
-        <button onclick="calculerScoreGlobal()">Calculer le score global RSE</button>
-        <div id="result_global" class="result" style="display: none;"></div>
     </div>
-</div>
 </section>
-
 
 <section id="footer">
     <footer>
