--- a/index.html
+++ b/index.html
@@ -35,56 +35,51 @@
         <img src="img/carteOrange.jpg" alt="carte" style="margin-left: 20px; flex: 1;">
     </div>
 
-
-
-
-
-<div style="display: flex; align-items: center; background-color: black; color: white;">
-    <div style="flex: 1;">
-        <h1>Notre objectif</h1>
-        <p>Créer des offres RSE écoresponsables, accessibles et inclusives pour les clients PME d'Orange.</p>
-        <ul>
-            <li>Environnement : impacts liés aux procédés de production (ex : consommation d’énergie et émissions de gaz à effet de serre) ainsi qu’à l’usage du produit et à sa fin de vie ;</li>
-            <li>Social & Droits de l’Homme : impacts sur les employés, par exemple les conditions de travail, mais aussi les droits humains des employés et de la communauté, par exemple le harcèlement ;</li>
-            <li>Éthique : enjeux de corruption, pratiques anticoncurrentielles et gestion responsable de l’information ;</li>
-            <li>Achats Responsables : prend en compte les problématiques sociales et environnementales en lien avec les fournisseurs.</li>
-        </ul>
+    <div style="display: flex; align-items: center; background-color: black; color: white;">
+        <div style="flex: 1;">
+            <h1>Notre objectif</h1>
+            <p>Créer des offres RSE écoresponsables, accessibles et inclusives pour les clients PME d'Orange.</p>
+            <ul>
+                <li>Environnement : impacts liés aux procédés de production (ex : consommation d’énergie et émissions de gaz à effet de serre) ainsi qu’à l’usage du produit et à sa fin de vie ;</li>
+                <li>Social & Droits de l’Homme : impacts sur les employés, par exemple les conditions de travail, mais aussi les droits humains des employés et de la communauté, par exemple le harcèlement ;</li>
+                <li>Éthique : enjeux de corruption, pratiques anticoncurrentielles et gestion responsable de l’information ;</li>
+                <li>Achats Responsables : prend en compte les problématiques sociales et environnementales en lien avec les fournisseurs.</li>
+            </ul>
+        </div>
+        <img alt="obj" src="img/objectifs.jpeg" style="margin-left: 20px; flex: 1;">
     </div>
-    <img alt="obj" src="img/objectifs.jpeg" style="margin-left: 20px; flex: 1;">
-</div>
 
-
-
-<div style="display: flex; align-items: center;">
-    <img alt="rse" src="img/rsepres.webp" style="margin-right: 20px; flex: 1;">
-    <div style="flex: 1;">
-        <h1>La RSE qu'est-ce que c'est ?</h1>
-        <p>La RSE est la responsabilité sociétale des entreprises. C'est un concept qui vise à intégrer les préoccupations sociales, environnementales et économiques dans les activités de l'entreprise. Cela signifie que l'entreprise doit prendre en compte l'impact de ses activités sur la société et l'environnement et agir de manière responsable.</p>
+    <div style="display: flex; align-items: center;">
+        <img alt="rse" src="img/rsepres.webp" style="margin-right: 20px; flex: 1;">
+        <div style="flex: 1;">
+            <h1>La RSE qu'est-ce que c'est ?</h1>
+            <p>La RSE est la responsabilité sociétale des entreprises. C'est un concept qui vise à intégrer les préoccupations sociales, environnementales et économiques dans les activités de l'entreprise. Cela signifie que l'entreprise doit prendre en compte l'impact de ses activités sur la société et l'environnement et agir de manière responsable.</p>
+        </div>
     </div>
-</div>
-<div style="display: flex; align-items: center; background-color: black; color: white;">
-    <div style="flex: 1;">
-        <h1>La RSE au cœur des PME</h1>
-        <p>La RSE est un enjeu majeur pour les PME (petite et moyennes entreprises). En effet, les PME ont un impact
-            important sur la société et l'environnement en raison de leur taille et de leur nombre. Il est donc essentiel
-            que les PME intègrent la RSE dans leur stratégie et leurs activités pour contribuer au développement durable et
-            à la responsabilité sociétale.</p>
-    </div>
-    <img alt="pmerse" src="img/pmerse.png"  style="margin-left: 20px; flex: 1;">
-</div>
 
-<div style="display: flex; align-items: center;">
-    <img alt="donnee" src="img/donnée.jpeg" style="margin-right: 20px; flex: 1;">
-    <div style="flex: 1;">
-        <h1>Données :</h1>
-        <p>Selon le Baromètre RSE 2024, 72% des PME disposent d'un budget dédié à la RSE, et 62% ont une équipe de 1 à 2 personnes consacrées à ces enjeux.
-            De plus, 34% des PME possèdent au moins un label, une certification ou une notation en matière de RSE.
-        </p>
+    <div style="display: flex; align-items: center; background-color: black; color: white;">
+        <div style="flex: 1;">
+            <h1>La RSE au cœur des PME</h1>
+            <p>La RSE est un enjeu majeur pour les PME (petite et moyennes entreprises). En effet, les PME ont un impact
+                important sur la société et l'environnement en raison de leur taille et de leur nombre. Il est donc essentiel
+                que les PME intègrent la RSE dans leur stratégie et leurs activités pour contribuer au développement durable et
+                à la responsabilité sociétale.</p>
+        </div>
+        <img alt="pmerse" src="img/pmerse.png"  style="margin-left: 20px; flex: 1;">
     </div>
-</div>
 
-<h1 style="color: white; background-color: black;">Offres :</h1>
-<p style="color: white; background-color: black;">Isso 26000/14001</p>
+    <div style="display: flex; align-items: center;">
+        <img alt="donnee" src="img/donnée.jpeg" style="margin-right: 20px; flex: 1;">
+        <div style="flex: 1;">
+            <h1>Données :</h1>
+            <p>Selon le Baromètre RSE 2024, 72% des PME disposent d'un budget dédié à la RSE, et 62% ont une équipe de 1 à 2 personnes consacrées à ces enjeux.
+                De plus, 34% des PME possèdent au moins un label, une certification ou une notation en matière de RSE.
+            </p>
+        </div>
+    </div>
+
+    <h1 style="color: white; background-color: black;">Offres :</h1>
+    <p style="color: white; background-color: black;">Isso 26000/14001</p>
 
     <h1>Rentabilités :</h1>
     <table border="1" style="border-collapse: collapse; width: 100%;">
@@ -166,6 +161,64 @@
     </footer>
 </section>
 
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const synth = window.speechSynthesis;
+        let utterance = null;
+
+        // Bouton Play
+        const playBtn = document.createElement("button");
+        playBtn.textContent = "Play";
+        playBtn.style.position = "fixed";
+        playBtn.style.bottom = "20px";
+        playBtn.style.left = "20px";
+        playBtn.style.backgroundColor = "#FF6600";
+        playBtn.style.color = "#fff";
+        playBtn.style.border = "none";
+        playBtn.style.padding = "10px 20px";
+        playBtn.style.cursor = "pointer";
+        playBtn.style.borderRadius = "5px";
+        playBtn.style.marginRight = "10px";
+
+        // Bouton Pause
+        const pauseBtn = document.createElement("button");
+        pauseBtn.textContent = "Pause";
+        pauseBtn.style.position = "fixed";
+        pauseBtn.style.bottom = "20px";
+        pauseBtn.style.left = "110px"; // Décalage à droite du bouton Play
+        pauseBtn.style.backgroundColor = "#FF6600";
+        pauseBtn.style.color = "#fff";
+        pauseBtn.style.border = "none";
+        pauseBtn.style.padding = "10px 20px";
+        pauseBtn.style.cursor = "pointer";
+        pauseBtn.style.borderRadius = "5px";
+
+        // Lecture du contenu
+        playBtn.addEventListener("click", () => {
+            if (!utterance || synth.paused) {
+                if (!utterance) {
+                    const textToRead = document.body.innerText;
+                    utterance = new SpeechSynthesisUtterance(textToRead);
+                    utterance.lang = "fr-FR";
+                }
+                synth.speak(utterance);
+            } else {
+                synth.resume(); // Reprend si la lecture est en pause
+            }
+        });
+
+        // Pause de la lecture
+        pauseBtn.addEventListener("click", () => {
+            if (synth.speaking) {
+                synth.pause();
+            }
+        });
+
+        // Ajouter les boutons au document
+        document.body.appendChild(playBtn);
+        document.body.appendChild(pauseBtn);
+    });
+</script>
 
 </body>
 </html>
