ajout de la flèche pour mettre vers le haut

--- a/calculator.html
+++ b/calculator.html
@@ -203,6 +203,9 @@
             <div id="result_global" class="result" style="display: none;"></div>
         </div>
     </div>
+    <a href="#" class="scroll-to-top" id="scrollToTop">
+        &#8679;
+    </a>
 </section>
 
 <section id="footer">
