--- a/connexion.html
+++ b/connexion.html
@@ -82,6 +82,9 @@
     <div id="gaugeContainer">
         <canvas id="gaugeChart"></canvas>
     </div>
+    <a href="#" class="scroll-to-top" id="scrollToTop">
+        &#8679;
+    </a>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
