--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
     <div style="display: flex; align-items: center; margin-top: 0;">
         <div style="flex: 1;">
             <h1>Accueil</h1>
-            <p>Orange est une entreprise de télécommunication française. Elle est le principal opérateur de téléphonie mobile en
-                France et, un des principaux fournisseurs d'accès à internet. Elle est également présent dans le monde entier,
-                notamment en Afrique et au Moyen-Orient.</p>
-            <h3>L’activité d’orange en l’état actuel :</h3>
-            <p>Orange peut proposer des solutions technologiques permettant aux PME de réduire leur empreinte environnementale
-                (ex. cloud éco-responsable, outils collaboratifs pour réduire les déplacements).</p>
+            <p>Act 4 Change est une entreprise spécialisée dans l'accompagnement des PME et ProPME vers une transition responsable, en mettant l'accent sur la mise en relation avec des experts,
+                le consulting RSE, les audits stratégiques, et l’établissement de rapports RSE adaptés aux normes internationales comme ISO 26000 et 14001.
+            </p>
+            <h3>Notre spécificité :</h3>
+            <ul>
+                <li>Un service en présentiel : Organisation de journées et d’événements immersifs pour engager vos équipes et accélérer les démarches RSE.
+                </li>
+                <li>Expertise complète : Diagnostic, mise en œuvre et suivi des pratiques responsables.
+                </li>
+            </ul>
+            <p>Act 4 Change aide à transformer les engagements RSE en valeur ajoutée concrète pour les entreprises. </p>
         </div>
         <img src="img/carteOrange.jpg" alt="carte" style="margin-left: 20px; flex: 1;">
     </div>
@@ -44,6 +49,7 @@
                 <li>Social & Droits de l’Homme : impacts sur les employés, par exemple les conditions de travail, mais aussi les droits humains des employés et de la communauté, par exemple le harcèlement ;</li>
                 <li>Éthique : enjeux de corruption, pratiques anticoncurrentielles et gestion responsable de l’information ;</li>
                 <li>Achats Responsables : prend en compte les problématiques sociales et environnementales en lien avec les fournisseurs.</li>
+                <li>Créer des offres RSE écoresponsables, accessibles et inclusives pour les clients PME d'Orange.</li>
             </ul>
         </div>
         <img alt="obj" src="img/objectifs.jpeg" style="margin-left: 20px; flex: 1;">
@@ -75,6 +81,28 @@
             <p>Selon le Baromètre RSE 2024, 72% des PME disposent d'un budget dédié à la RSE, et 62% ont une équipe de 1 à 2 personnes consacrées à ces enjeux.
                 De plus, 34% des PME possèdent au moins un label, une certification ou une notation en matière de RSE.
             </p>
+            <p>La France confirme sa 3e place dans le classement mondial des moyennes pays aux côtés de la Suède et de la Finlande.
+                Le score global France de 54,3/100 en 2020 est qualité de niveau “adapté”. Il est supérieur aux moyennes de l’UE (52,5).
+            </p>
+            <p>Selon le Baromètre RSE 2024, 72% des PME disposent d'un budget dédié à la RSE, et 62% ont une équipe de 1 à 2 personnes consacrées à ces enjeux.
+                De plus, 34% des PME possèdent au moins un label, une certification ou une notation en matière de RSE.
+            </p>
+            <p>66 % des entreprises françaises ont au moins une mesure en place, avec une prédominance de l’évaluation des fournisseurs (39 % en France, 52 % en Suède).
+            </p>
+
+            <p><b>Mesures principales :</b> Codes de conduite fournisseurs (33 %), clauses sociales et environnementales, et cartographie des risques.</p>
+            <p><b>Différences selon la taille :</b> Les grandes entreprises adoptent davantage de mesures avancées, tandis que les PME sont alignées avec la moyenne européenne.<p>
+                <p><b>Progrès notables :</b> Forte adoption des codes de conduite (+23 % depuis 2015).
+                Les Achats Responsables en Europe montrent une progression, notamment avec 19 % d'entreprises "locomotives"
+            atteignant des niveaux exemplaires en RSE. La France, leader en la matière,
+            promeut un modèle économique basé sur des pratiques durables.</p>
+           <p> <b>Le Parcours National Achats Responsables</b> soutient les entreprises dans l’adoption de la norme ISO 20400 via des objectifs mesurables, des audits réguliers et une gouvernance adaptée. L’objectif est de renforcer les relations client-fournisseur
+               et d’encourager des achats à impact environnemental, social et économique positif.</p>
+                <p><b>L’activité d’orange en l’état actuel:</b>
+
+                Orange peut proposer des solutions technologiques permettant aux PME de réduire leur empreinte environnementale (ex. cloud éco-responsable, outils collaboratifs pour réduire les déplacements).
+            </p>
+            
         </div>
     </div>
 
