--- a/expertise.html
+++ b/expertise.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Expertise</title>
+    <title>Orange</title>
+    <link rel="stylesheet" href="styleIndex.css">
 </head>
 <body>
+<nav>
+    <ul style="display: flex; justify-content: space-between; width: 100%; margin-top: 20px; align-items: center;">
+        <div style="display: flex; align-items: center;">
+            <img alt="orange" src="img/logo%20Act%20%204%20change.webp" style="width: 160px; margin-right: 20px;">
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="expertise.html">Expertise</a></li>
+            <li><a href="calculator.html">Calculez son RSE</a></li>
+        </div>
+        <li style="display: flex; align-items: center;">
+            <img src="img/avatar.png" alt="connexion" style="width: 25px; margin-right: 5px;">
+            <a href="connexion.html">Se connecter</a>
+        </li>
+    </ul>
+</nav>
 
-
+<section id="footer">
+    <footer>
+        <h2>Contacts</h2>
+        <div class="contact">
+            <div>
+                <p>Florimon :</p>
+                <a href="https://www.linkedin.com/in/florimon-faure-9790a931a/?originalSubdomain=fr">LinkedIn</a>
+            </div>
+            <div>
+                <p>Wayan :</p>
+                <a href="https://www.linkedin.com/in/wayan-poulet-976486206/?originalSubdomain=fr">LinkedIn</a>
+            </div>
+            <div>
+                <p>Aude :</p>
+                <a href="https://www.linkedin.com/in/aude-gauthereau-455b41213/">LinkedIn</a>
+            </div>
+            <div>
+                <p>Noam :</p>
+                <a href="https://www.linkedin.com/in/noam-baroukh-b40738300/">LinkedIn</a>
+            </div>
+            <div>
+                <p>Dan :</p>
+                <a href="https://www.linkedin.com/in/dan-bitton-58a50b264/">LinkedIn</a>
+            </div>
+        </div>
+    </footer>
+</section>
 </body>
 </html>
