--- a/index.html
+++ b/index.html
@@ -106,8 +106,68 @@
         </div>
     </div>
 
-    <h1 style="color: white; background-color: black;">Offres :</h1>
-    <p style="color: white; background-color: black;">Isso 26000/14001</p>
+    <section id="offre">
+    <h1 style="color: #ff7900; background-color: black;">Offres :</h1>
+    <h2>Notre approche : Un service complet et personnalisé</h2>
+    <p>Nous proposons une gamme de services pour aider les PME à intégrer des normes de responsabilité sociétale et de gestion environnementale dans leurs activités.</p>
+
+    <h3>Mise en relation avec des experts certifiés :</h3>
+    <ul>
+        <li>Sélection de consultants spécialisés dans la RSE et la gestion environnementale.</li>
+        <li>Partenariat avec des auditeurs accrédités.</li>
+    </ul>
+
+    <h3>Consulting et audit RSE :</h3>
+    <ul>
+        <li>Diagnostic des pratiques actuelles pour identifier les axes d’amélioration.</li>
+        <li>Élaboration d’un plan d’action conforme aux exigences des normes ISO 26000 et 14001.</li>
+    </ul>
+
+    <h3>Établissement de rapports RSE :</h3>
+    <ul>
+        <li>Création de documents officiels selon les standards internationaux.</li>
+        <li>Présentation des résultats avec des indicateurs clés pour assurer la transparence.</li>
+    </ul>
+
+    <h3>Organisation de journées et événements dédiés :</h3>
+    <ul>
+        <li>Ateliers en présentiel pour former vos équipes aux pratiques RSE et environnementales.</li>
+        <li>Journées de simulation d’audit pour garantir votre préparation.</li>
+    </ul>
+
+    <h3>Vente de services complémentaires :</h3>
+    <ul>
+        <li>Formations personnalisées en gestion durable.</li>
+        <li>Accompagnement dans le déploiement de politiques RSE internes.</li>
+    </ul>
+        <h2>Notre valeur ajoutée : L’expérience en présentiel</h2>
+        <p>Contrairement aux solutions entièrement numériques, Act 4 Change propose une expérience humaine et immersive :</p>
+        <ol>
+            <li>Rencontres physiques avec nos experts : Créez une relation de confiance et bénéficiez d’un suivi de proximité.</li>
+            <li>Événements collaboratifs : Engagez vos équipes autour d’ateliers pratiques et interactifs.</li>
+            <li>Simulations grandeur nature : Préparez-vous efficacement aux audits grâce à des exercices en conditions réelles.</li>
+            <li>Personnalisation : Chaque accompagnement est conçu sur mesure pour répondre à vos spécificités.</li>
+        </ol>
+
+        <h2>Pourquoi choisir Act 4 Change ?</h2>
+        <ol>
+            <li>Expertise éprouvée dans la RSE et les normes ISO.</li>
+            <li>Approche conviviale et pragmatique grâce à des interventions sur le terrain.</li>
+            <li>Outils personnalisés pour garantir une transition réussie vers des pratiques durables.</li>
+        </ol>
+
+        <h2>Les bénéfices pour votre entreprise :</h2>
+        <ol>
+            <li>Obtenez des certifications reconnues mondialement pour renforcer votre compétitivité.</li>
+            <li>Valorisez vos engagements sociétaux et environnementaux auprès de vos clients, investisseurs et collaborateurs.</li>
+            <li>Améliorez vos performances grâce à des outils et méthodes alignés avec les meilleures pratiques.</li>
+        </ol>
+
+        <p>Investissez dans la durabilité et valorisez votre entreprise avec Act 4 Change. Notre équipe vous accompagne de A à Z pour transformer vos engagements en résultats concrets. Contactez-nous dès aujourd’hui pour construire votre parcours vers les certifications ISO 26000 et 14001. 🌍</p>
+    </section>
+
+
+
 
     <h1>Rentabilités :</h1>
     <table border="1" style="border-collapse: collapse; width: 100%;">
